Fix DesktopIcons alignment

--- a/src/css/desktop/desktopicons.css
+++ b/src/css/desktop/desktopicons.css
@@ -21,25 +21,25 @@ div.desktop.tbdocked:not(.tb-vertical):not(.tb-vertical-right)
   height: calc(100% - 45px);
 }
 
-div.desktop.tb-vertical div.desktopIcons {
+div.desktop.tb-vertical div.desktopIcons:not(.launcher) {
   margin-left: 65px;
   width: calc(100% - 65px);
   height: 100%;
 }
 
-div.desktop.tb-vertical.tbdocked div.desktopIcons {
+div.desktop.tb-vertical.tbdocked div.desktopIcons:not(.launcher) {
   margin-left: 45px;
   width: calc(100% - 45px);
   height: 100%;
 }
 
-div.desktop.tb-vertical-right.tbdocked div.desktopIcons {
+div.desktop.tb-vertical-right.tbdocked div.desktopIcons:not(.launcher) {
   margin-right: 45px;
   width: calc(100% - 45px);
   height: 100%;
 }
 
-div.desktop.tb-vertical-right div.desktopIcons {
+div.desktop.tb-vertical-right div.desktopIcons:not(.launcher) {
   margin-right: 65px;
   width: calc(100% - 65px);
   height: 100%;
